Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanNumObjField.quorum
class Main
    Number v
    v:SetValue(5.0)
    action Main
        Test(v)
    end

    action Test(boolean var)
    end
end
